--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "handlebars": "^4.0.5",
+    "handlebars-intl": "^1.1.2",
     "keystone": "^0.3.19",
     "lodash": "^4.13.1",
     "moment": "^2.10.6",
